$Id: History,v 1.25 2000-06-06 10:53:38 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

5th June May 2000  Evgeni Chernaev (greps-V01-01-04)
- Bug fix in BooleanProcessor.src.
- Graceful recovery from caseIE() and caseEE() non-implementation
  (first polygon returned).

20th May 2000  Evgeni Chernaev (greps-V01-01-03)
- Temporary workaround to avoid caseIE() and caseEE.

13th May 2000  John Allison (greps-V01-01-02)
- Changed std:: to HepStd:: for ISO compatibility (Evgeni Chernaev).

11th April 2000  John Allison (greps-V01-01-01)
- Added operator = (const HepPolyhedron&) to ExtPolyhedron.

6th April 2000  John Allison (greps-V01-01-00)
- Tagged.

4th April 2000  Evgeni Chernaev
- Added boolean operations (add, subtract, intersect) on HepPolyhedron objects.
- Added BooleanProcessor.src.

30th March 2000  John Allison
- Added virtual operator= to G4Polyhedron.hh and HepPolyhedron.h to avoid
  warnings about hiding.

23rd February 2000  John Allison
- Moved G4Polyhedron constructors and destructor to .cc.

22nd February 2000  Evgeni Chernaev (greps-V01-00-03)
- Re-instated edge flags for "invisible" edges of HepPolyhedronCons and Torus.

22nd February 2000  John Allison  (greps-V01-00-02)