@@ -1,20 +1,0 @@
-// This code implementation is the intellectual property of
-// the GEANT4 collaboration.
-//
-// By copying, distributing or modifying the Program (or any work
-// based on the Program) you indicate your acceptance of this statement,
-// and all its terms.
-//
-// $Id: G4Circle.icc,v 1.3 1999-12-15 14:50:32 gunter Exp $
-// GEANT4 tag $Name: not supported by cvs2svn $
-//
-// 
-// John Allison  17/11/96.
-
-inline G4Circle::G4Circle () {}
-
-inline G4Circle::G4Circle (const G4Point3D& pos):
-G4VMarker (pos) {}
-
-inline G4Circle::G4Circle (const G4VMarker& marker):
-G4VMarker (marker) {}
