@@ -1,23 +1,0 @@
-// This code implementation is the intellectual property of
-// the GEANT4 collaboration.
-//
-// By copying, distributing or modifying the Program (or any work
-// based on the Program) you indicate your acceptance of this statement,
-// and all its terms.
-//
-// $Id: G4VVisPrim.icc,v 1.3 1999-12-15 14:50:34 gunter Exp $
-// GEANT4 tag $Name: not supported by cvs2svn $
-//
-// 
-// John Allison  August 1995
-
-inline G4VVisPrim::G4VVisPrim () {}
-
-inline G4VVisPrim::G4VVisPrim (const G4VVisPrim& prim):
-G4Visible (prim)
-{}
-
-inline G4VVisPrim::G4VVisPrim (const G4VisAttributes* pVA):
-G4Visible (pVA)
-{}
-
