@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4VVisPrim.cc,v 1.5 1999-12-15 14:50:36 gunter Exp $
+// $Id: G4VVisPrim.cc,v 1.6 2001-02-03 18:30:00 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -14,6 +14,16 @@
 #include "G4VVisPrim.hh"
 #include "G4VisAttributes.hh"
 #include "G4ios.hh"
+
+G4VVisPrim::G4VVisPrim () {}
+
+G4VVisPrim::G4VVisPrim (const G4VVisPrim& prim):
+G4Visible (prim)
+{}
+
+G4VVisPrim::G4VVisPrim (const G4VisAttributes* pVA):
+G4Visible (pVA)
+{}
 
 G4VVisPrim::~G4VVisPrim () {}
 
